--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
 
   mysql:
     image: mysql:5.6
-    container_name: snipe-mysql2
+    container_name: snipe-mysql
     restart: always
     volumes:
       - mysql:/var/lib/mysql
@@ -14,7 +14,7 @@ services:
       - MYSQL_DATABASE=snipe
   snipeit:
     image: linuxserver/snipe-it:latest
-    container_name: snipe-it2
+    container_name: snipe-it
     restart: always
     depends_on:
       - mysql
@@ -22,7 +22,7 @@ services:
       - snipe:/config
     environment:
       - APP_URL=http://192.100.100.246:8090
-      - APP_TIMEZONE='Asia/Jakarta'
+      - APP_TIMEZONE=Asia/Jakarta
       - APP_LOCALE=id
       - MYSQL_PORT_3306_TCP_ADDR=mysql
       - MYSQL_PORT_3306_TCP_PORT=3306
