--- a/docker-ownloud.yml
+++ b/docker-ownloud.yml
@@ -13,7 +13,7 @@ volumes:
 services:
   owncloud:
     image: owncloud/server:${OWNCLOUD_VERSION}
-    restart: always
+    restart: unless-stopped
     ports:
       - ${HTTP_PORT}:8080
     depends_on:
@@ -41,7 +41,7 @@ services:
 
   db:
     image: webhippie/mariadb:latest
-    restart: always
+    restart: unless-stopped
     environment:
       - MARIADB_ROOT_PASSWORD=owncloud
       - MARIADB_USERNAME=owncloud
@@ -60,7 +60,7 @@ services:
 
   redis:
     image: webhippie/redis:latest
-    restart: always
+    restart: unless-stopped
     environment:
       - REDIS_DATABASES=1
     healthcheck:
