--- a/docker-ownloud.yml
+++ b/docker-ownloud.yml
@@ -12,35 +12,33 @@ volumes:
 
 services:
   owncloud:
-    image: owncloud/server:${OWNCLOUD_VERSION}
+    image: owncloud/server:latest
+    container_name: owncloud
     restart: unless-stopped
     ports:
-      - ${HTTP_PORT}:8080
+      - 8080
     depends_on:
       - db
       - redis
     environment:
-      - OWNCLOUD_DOMAIN=${OWNCLOUD_DOMAIN}
+      - OWNCLOUD_DOMAIN=your ip address
       - OWNCLOUD_DB_TYPE=mysql
       - OWNCLOUD_DB_NAME=owncloud
       - OWNCLOUD_DB_USERNAME=owncloud
       - OWNCLOUD_DB_PASSWORD=owncloud
       - OWNCLOUD_DB_HOST=db
-      - OWNCLOUD_ADMIN_USERNAME=${ADMIN_USERNAME}
-      - OWNCLOUD_ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - OWNCLOUD_ADMIN_USERNAME=admin
+      - OWNCLOUD_ADMIN_PASSWORD=admin
       - OWNCLOUD_MYSQL_UTF8MB4=true
       - OWNCLOUD_REDIS_ENABLED=true
       - OWNCLOUD_REDIS_HOST=redis
-    healthcheck:
-      test: ["CMD", "/usr/bin/healthcheck"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+    
     volumes:
       - files:/mnt/data
 
   db:
     image: webhippie/mariadb:latest
+    container_name: mariadb
     restart: unless-stopped
     environment:
       - MARIADB_ROOT_PASSWORD=owncloud
@@ -49,24 +47,16 @@ services:
       - MARIADB_DATABASE=owncloud
       - MARIADB_MAX_ALLOWED_PACKET=128M
       - MARIADB_INNODB_LOG_FILE_SIZE=64M
-    healthcheck:
-      test: ["CMD", "/usr/bin/healthcheck"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-    volumes:
+    
       - mysql:/var/lib/mysql
       - backup:/var/lib/backup
 
   redis:
     image: webhippie/redis:latest
+    container_name: redis
     restart: unless-stopped
     environment:
       - REDIS_DATABASES=1
-    healthcheck:
-      test: ["CMD", "/usr/bin/healthcheck"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+    
     volumes:
       - redis:/var/lib/redis
